change body path

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A optio illo adipisci modi blanditiis voluptate dicta, incidunt, 
-        natus fugit maiores eveniet tenetur voluptatem nam culpa nihil dignissimos dolore quo explicabo?</p>
+        natus dolor maiores eveniet tenetur voluptatem nam culpa nihil dignissimos dolore quo explicabo?</p>
 </body>
 </html>
