--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A optio illo adipisci modi blanditiis voluptate dicta, incidunt, 
         natus dolor maiores eveniet tenetur voluptatem nam culpa nihil dignissimos dolore quo explicabo?</p>
+      
+        <H1>MY WEBSITE</H1>
 </body>
 </html>
